# Handsome-Agent

./: .dockerignore  .env.example  .git_commit_msg.txt  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.brain  Dockerfile.gateway  LICENSE  README.md  TODO.md  _version.py  batch_runner.py  cli.py  copy_base.py  copy_base2.py  debug-cron-pane-empty.md  debug_path.py  docker-compose.yml  hermes_constants.py  hermes_state.py  main.py  model_tools.py  pyproject.toml  pytest.ini  pytest.out  requirements.txt  ruff.toml  run_agent.py  setup.py  smoke.out  temp_py_files.txt  test_llm_intent.py  test_llm_terminal.py  test_path_validation.py  test_query_intent.py  test_select_simple.py  test_theme.py  test_tools_title.py  (+3 more)
.claude/: settings.json
.rules/: coding_rules.md
.trae/: optimization_plan.md  tasks.md  todo.md
adapter/: __init__.py  gateway.py  gateway_cli.py  message.py
advanced_reasoning/: README.md  __init__.py  demo_all.py  demo_full.py  demo_full_fixed.py  integration.py  memory.py  memory_simple.py  module.py  multi_agent.py
agent/: README.md  __init__.py  abductive.py  (+61 more)
cli/: README.md  __init__.py  _parser.py  auth_cli.py  banner.py  callbacks.py  cli_output.py  colors.py  commands.py  compat.py  completion.py  config.py  config_cli.py  curses_ui.py  doctor.py  env_loader.py  interactive_select.py  llm_cli.py  main.py  model_cli.py  modern_cli.py  profiles.py  pyproject.toml  relaunch.py  setup.py  setup_wizard.py  skills_config.py  skin_engine.py  tools_config.py  ui.py  uninstall.py
cli/cli_commands/: __init__.py  acp.py  auth.py  bundle.py  completion.py  config.py  cron.py  debug.py  dump.py  gateway.py  kanban.py  llm.py  logs.py  memory.py  models.py  providers.py  sessions.py  skills.py  status.py  uninstall.py
cli/components/: banner.py  colors.py
cli/config/: __init__.py  config.py  config_cli.py  lock_file.py  model_cli.py  profiles.py  skills_config.py  tools_config.py
cli/docs/: architecture.md
cli/proxy/: __init__.py  cli.py  server.py
cli/proxy/adapters/: __init__.py  base.py
cli/setup/: __init__.py  env_loader.py  interactive_select.py  setup_wizard.py
cli/system/: __init__.py  backup.py  callbacks.py  compat.py  hooks.py
cli/tui/: __init__.py  curses_ui.py  keybindings.py  markdown_renderer.py  sidebar.py  textual_app.py  themes.py
cli/tui/core/: __init__.py  keybindings.py  markdown_renderer.py
cli/tui/services/: __init__.py  session_store.py
cli/tui/styles/: base.css  components.css
cli/tui/styles/themes/: default.css
cli/tui/textual_app/: __init__.py  app.py  css.py  helpers.py  notifications.py
cli/tui/themes/: __init__.py  colors.py  icons.py  preset_themes.py  theme_config.py  theme_manager.py  typography.py
cli/tui/theming/: __init__.py  colors.py  icons.py  preset_themes.py  typography.py
cli/tui/theming/css/: animations.css  base.css  components.css  layout.css
cli/tui/theming/css/themes/: default.css
cli/tui/views/: __init__.py  help_view.py  onboarding_screen.py  session_picker.py  welcome_screen.py
cli/tui/widgets/: __init__.py  approval_dialog.py  command_palette.py  message_list.py  status_bar.py  streaming_text.py
cli/ui/: __init__.py  banner.py  skin_engine.py
tui/: __init__.py  main.py  messages.py  pyproject.toml  sidebar.py
tui/consumers/: __init__.py  tasks_consumer.py
tui/core/: __init__.py  curses_ui.py  markdown_renderer.py
tui/services/: __init__.py  session_store.py
tui/textual_app/: __init__.py  agent_runner.py  app.py  constants.py  css.py  helpers.py  icons.py  imports.py  input_queue.py  loading.py  log_handler.py  model_selector.py  session.py  status_bar.py  text_area.py  wisdom.py
tui/textual_app/css/: __init__.py  base.py  chat.py  header.py  input_area.py  input_queue.py  screens.py  sidebar_layout.py  slash_completion.py  status_bar.py  transparency.py
tui/theming/: __init__.py  preset_themes.py  theme_config.py  theme_manager.py  typography.py
tui/theming/css/: __init__.py  animations.css  base.css  components.css  layout.css
tui/theming/css/themes/: awesome.css  default.css
tui/views/: __init__.py  chat_view.py  cron_view.py  file_preview.py  help_view.py  log_screen.py  onboarding_screen.py  session_picker.py  settings_screen.py  skill_detail.py  welcome_screen.py
tui/views/onboarding/: __init__.py  welcome_screen.py  wizard_screen.py
tui/views/settings/: __init__.py  manager.py  models.py  widgets.py
tui/widgets/: __init__.py  approval_dialog.py  chat_container.py  chat_item.py  command_palette.py  input_queue_panel.py  message_list.py  slash_completion.py  status_bar.py  streaming_text.py
(+867 files in other folders)
