[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-z"
version = "0.0.1"
description = "Agent-Z - Hermes-Brain + OpenClaw-Body AI Assistant"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Agent-Z Team", email = "agent-z@example.com"}
]
keywords = ["ai", "agent", "assistant", "cli", "tui", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.25.0",
    "psutil>=5.9.0",
    "croniter>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "inquirer>=3.0.0",
    "rich>=13.0.0",
    "textual>=8.2",
    "textual-speedups>=0.2",
    # Platform specific
    "windows-curses>=2.3.0; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.14.0",
    "pytest-cov>=2.10.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "black>=23.0.0",
    "pre-commit>=3.0.0",
]
tui = [
    "textual>=8.2",
    "textual-speedups>=0.2",
    "rich>=13.0.0",
]
# Optional LLM providers
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.10.0"]
gemini = ["google-genai>=0.3.0"]
all-providers = [
    "openai>=1.0.0",
    "anthropic>=0.10.0",
    "google-genai>=0.3.0",
]

[project.scripts]
agentz = "cli.main:main"
agentz-tui = "cli.main:run_textual_mode"

[project.urls]
Homepage = "https://github.com/your-repo/agent-z"
Documentation = "https://agent-z.readthedocs.io"
Repository = "https://github.com/your-repo/agent-z"
Changelog = "https://github.com/your-repo/agent-z/blob/main/docs/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "cli*", "common*", "tools*", "gateway*", "executor*", "cron*", "tui*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.css", "*.md"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
