[project]
name = "agent-z-tui"
version = "0.1.0"
description = "Terminal User Interface for Agent-Z"
requires-python = ">=3.10"
dependencies = [
    "textual>=8.2",
    "textual-speedups>=0.2",
    "rich>=13.0.0",
]

[project.scripts]
agentz-tui = "tui.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
